--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: jammy
 sudo: false
 addons:
-  ssh_known_hosts: portal.bewegung.jetzt
+  ssh_known_hosts: iris.bewegung.jetzt
 script:
 - echo "kewl"
 
@@ -14,7 +14,7 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/ root@portal.bewegung.jetzt:/var/dib/portal/build
+  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/ root@iris.bewegung.jetzt:/var/dib/portal/build
   on:
     branch: master
     condition: '"$TRAVIS_PULL_REQUEST" = "false"'
