--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,13 @@ dist: jammy
 sudo: false
 addons:
   ssh_known_hosts: iris.bewegung.jetzt
+
 script:
 - echo "kewl"
 
 before_deploy:
-- openssl aes-256-cbc -K $encrypted_697b8c654e27_key -iv $encrypted_697b8c654e27_iv -in .ci/id.key.enc -out /tmp/deploy_rsa -d
+- "openssl aes-256-cbc -K $encrypted_697b8c654e27_key -iv 
+$encrypted_697b8c654e27_iv -in .ci/id.key.enc -out /tmp/deploy_rsa -d"
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
@@ -14,7 +16,8 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/ root@iris.bewegung.jetzt:/var/dib/portal/build
+  script: "rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/ 
+root@iris.bewegung.jetzt:/var/dib/portal/build"
   on:
     branch: master
     condition: '"$TRAVIS_PULL_REQUEST" = "false"'
